# VendingMachineCPP

./: CMakeLists.txt  main.cpp
Google_tests/: VendingMachineTests.cpp
Google_tests/lib/googlemock/include/gmock/: gmock-matchers.h
Tests/: CMakeLists.txt  CashierTest.cpp  CoinChangeTest.cpp  CoinChangeTests.cpp  VendingMachineTests.cpp
Tests/lib/googletest/cmake/: internal_utils.cmake
VendingMachine_lib/: CMakeLists.txt  Cashier.cpp  Cashier.h  Coin.cpp  Coin.h  Product.h  Vending.cpp  Vending.h
